# user_polls

./: README.md  docker-compose.yml
polls/: Dockerfile  pyproject.toml
polls/main/: views.py
polls/main/admin/base/: __init__.py  answers.py  poll.py  question.py
polls/main/migrations/: 0001_initial.py  0002_auto_20210819_0852.py  0003_auto_20210820_1600.py
polls/main/models/base/: __init__.py  answers.py  poll.py  question.py
polls/main/serializers/base/: __init__.py  answers.py  client_poll.py  poll.py  question.py
polls/main/templates/main/: base.html  index.html  selected_poll_with_questions.html  selected_question_and_its_answers.html
polls/main/urls/: __init__.py  api.py  urls.py
polls/main/views/base/: __init__.py  answers.py  client_poll.py  index.py  poll.py  question.py  selected_poll.py  selected_question.py
polls/polls/: settings.py
polls/polls/settings/: __init__.py  db.py  djangorestframework.py  settings.py
polls/polls/urls/: __init__.py  main.py
